--- a/css/styles.css
+++ b/css/styles.css
@@ -71,11 +71,12 @@ section {
 .navbar__menu ul {
     padding-left: 0;
     margin: 0;
-    text-align: right;
+    text-align: center;
 }
 
 .navbar__menu li {
     display: inline-block;
+    padding: 5px 10px;
 }
 
 .navbar__menu .menu__link {
@@ -94,7 +95,7 @@ section {
 
 /* Header Styles */
 .page__header {
-    background: #fff;
+    background: #01071d;
     position: fixed;
     top: 0;
     width: 100%;
