--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,11 @@ section {
     top: 0;
     width: 100%;
     z-index: 5;
+    transition: opacity 0.5s ease-out;
+}
+
+.page__header.hidden {
+    opacity: 0;
 }
 
 /* Footer Styles */
