--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ section {
 .navbar__menu li {
     display: inline-block;
     padding: 5px 10px;
+    font-family: 'Oxygen', Sans-Serif;
 }
 
 .navbar__menu li.active {
@@ -123,12 +124,36 @@ section {
     color: #fff;
 }
 
+/* Top button */
+.button__top {
+    position: fixed;
+    font-family: 'Oxygen', Sans-Serif;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    background-color: #FFF;
+    padding: 10px;
+    color: #000;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
+}
+
+.button__top.show {
+    opacity: 1;
+}
+
+
 
 /* ---- Theme Rules ---- */
 /* Landing Container Styles */
 .landing__container {
     padding: 1em;
     text-align: left;
+}
+
+.landing__container.collapse > p {
+    display: none;
 }
 
 @media only screen and (min-width: 35em){
